--- a/pages/nosotros.html
+++ b/pages/nosotros.html
@@ -3,7 +3,12 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>pre-entrega-gonzalez</title><link rel="stylesheet" href="./../css/style.css">
+    <title>pre-entrega-gonzalez</title>
+    <!-- bootstrap -->
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-T3c6CoIi6uLrA9TneNEoa7RxnatzjcDSCmG1MXxSR1GAsXEV/Dwwykc2MPK8M2HN" crossorigin="anonymous">
+   <!-- css -->
+    <link rel="stylesheet" href="./../css/style.css">
+    <!-- fonts -->
     <link href="https://fonts.googleapis.com/css2?family=Fira+Sans+Extra+Condensed:wght@200&family=Lora:wght@600&family=Work+Sans&display=swap" rel="stylesheet">
 </head>
 <body>
@@ -64,5 +69,6 @@
      </div>
 
     </footer>
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js" integrity="sha384-C6RzsynM9kWDrMNeT87bh95OGNyZPhcTNXj1NW7RuBCsyN/o0jlpcV8Qyq46cDfL" crossorigin="anonymous"></script>
 </body>
 </html>
