cambios en el footer

--- a/pages/nosotros.html
+++ b/pages/nosotros.html
@@ -76,7 +76,7 @@
     </main>
     <footer>
            
-      <div class="redes"> 
+      <div class="redes-grid"> 
         <h3>Siguenos</h3>
         <a href="https://www.facebook.com/" target="_blank"><img src="./../img/kisspng-facebook-comp6.jpg" alt="logo-facebook"></a>
       
