--- a/pages/servicios.html
+++ b/pages/servicios.html
@@ -84,7 +84,7 @@
 
     <footer>
         
-      <div class="redes"> 
+      <div class="redes-grid"> 
         <h3>Siguenos</h3>
         <a href="https://www.facebook.com/" target="_blank"><img src="./../img/kisspng-facebook-comp6.jpg" alt="logo-facebook"></a>
       
