correccion en footer/pages

--- a/pages/trabajos.html
+++ b/pages/trabajos.html
@@ -63,28 +63,28 @@
         <h1>Nuestros trabajos</h1>
         <div class="contenedor-flex">
            <div class="card">
-             <img src="./../img/img-ropa.png" alt="producto">
+             <img src="./../img/ropa1.jpeg" alt="producto">
                <div>
                  <h2>producto</h2>
                  <p>Lorem ipsum dolor sit amet c</p>
                </div>
            </div>
            <div class="card">
-             <img src="./../img/img-ropa.png" alt="producto">
+             <img src="./../img/ropa2.webp" alt="producto">
               <div>
                 <h2>producto</h2>
                 <p>Lorem ipsum dolor sit amet consectetur, adipisic</p>
               </div>
            </div>
            <div class="card">
-             <img src="./../img/img-ropa.png" alt="producto">
+             <img src="./../img/ropa3.jpeg" alt="producto">
               <div>
                 <h2>producto</h2>
                 <p>Lorem ipsum dolor sit amet consectetur, adi</p>
               </div>
            </div>
            <div class="card">
-             <img src="./../img/img-ropa.png" alt="producto">
+             <img src="./../img/ropa4.jpeg" alt="producto">
               <div>
                 <h2>producto</h2>
                 <p>Lorem ipsum dolor sit amet con</p>
