contenido en colecciones

--- a/pages/trabajos.html
+++ b/pages/trabajos.html
@@ -63,28 +63,28 @@
       <section>
         <h1>Nuestras colecciones</h1>
         <div class="contenedor-flex">
-           <div class="card-coleccion">
+           <div class="card coleccion">
              <img src="./../img/coleccion1.jpeg" alt="producto">
                <div>
                  <h2>producto</h2>
                  <p>Lorem ipsum dolor sit amet c</p>
                </div>
            </div>
-           <div class="card-coleccion">
+           <div class="card coleccion">
              <img src="./../img/coleccion2.jpeg" alt="producto">
               <div>
                 <h2>producto</h2>
                 <p>Lorem ipsum dolor sit amet consectetur, adipisic</p>
               </div>
            </div>
-           <div class="card-coleccion">
+           <div class="card coleccion">
              <img src="./../img/coleccion3.jpeg" alt="producto">
               <div>
                 <h2>producto</h2>
                 <p>Lorem ipsum dolor sit amet consectetur, adi</p>
               </div>
            </div>
-           <div class="card-coleccion">
+           <div class="card coleccion">
              <img src="./../img/coleccion4.jpeg" alt="producto">
               <div>
                 <h2>producto</h2>
