mixins y demas cosas de sass

--- a/index.html
+++ b/index.html
@@ -35,7 +35,7 @@
                     <a class="nav-link active" aria-current="page" href="index.html">home</a>
                   </li>
                   <li class="nav-item">
-                    <a class="nav-link active" aria-current="page" href="pages/trabajos.html">colecciones</a>
+                    <a class="nav-link active" aria-current="page" href="pages/colecciones.html">colecciones</a>
                   </li>
                   <li class="nav-item">
                     <a class="nav-link active" aria-current="page" href="pages/nosotros.html">nosotros</a>
@@ -63,39 +63,39 @@
 <main>
     <section>
       <div class="banner">
-        <img src="img/Banner.png" alt="baner">
+        <img src="img/banner2.png" alt="baner">
       </div>
     </section>
     <section>
       
-        <h1>Productos</h1>
+        <h1>Productos deportivos</h1>
         <div class="contenedor-flex">
            <div class="card">
              <img src="img/ropa1.jpeg" alt="producto" class="img-ropa">
                <div>
-                 <h2>producto</h2>
-                 <p>Lorem ipsum dolor sit amet c</p>
+                 <h2>Pantalones</h2>
+                 <p>estos nuevos ingresos son de la mejor calidad.</p>
                </div>
            </div>
            <div class="card">
              <img src="img/ropa2.webp" alt="producto">
               <div>
-                <h2>producto</h2>
-                <p>Lorem ipsum dolor sit amet consectetur, adipisic</p>
+                <h2>Conjuntos</h2>
+                <p>tenemos de todos los estilos,seguro encontras el tuyo.</p>
               </div>
            </div>
            <div class="card">
              <img src="img/ropa3.jpeg" alt="producto">
               <div>
-                <h2>producto</h2>
-                <p>Lorem ipsum dolor sit amet consectetur, adi</p>
+                <h2>Camperas</h2>
+                <p>camperas deportivas de todo tipo.</p>
               </div>
            </div>
            <div class="card">
              <img src="img/ropa4.jpeg" alt="producto">
               <div>
-                <h2>producto</h2>
-                <p>Lorem ipsum dolor sit amet con</p>
+                <h2>ropa para niños</h2>
+                <p>las mejores prendas para todas las edades.</p>
               </div>
               
            </div>
