--- a/pages/servicios.html
+++ b/pages/servicios.html
@@ -31,7 +31,7 @@
                   <a class="nav-link active" aria-current="page" href="./../index.html">home</a>
                 </li>
                 <li class="nav-item">
-                  <a class="nav-link active" aria-current="page" href="./trabajos.html">colecciones</a>
+                  <a class="nav-link active" aria-current="page" href="./colecciones.html">colecciones</a>
                 </li>
                 <li class="nav-item">
                   <a class="nav-link active" aria-current="page" href="./nosotros.html">nosotros</a>
@@ -58,12 +58,13 @@
     <main>
       <section>
         <div class="banner">
-          <img src="./../img/Banner.png" alt="baner">
+          <img src="./../img/banner2.png" alt="baner">
           </div>
         </section>
      <div class="contenedor-flex">
+       <h1>servicios</h1>
         <div class="card">
-        <h1>servicios</h1>
+       <h2>nuestros servicios</h2>
         <p>
           Lorem ipsum, dolor sit amet consectetur adipisicing elit. Neque mol
           estias eius exercitationem eaque ipsa quam vero totam id consequatur, laborum placeat corrupti offi
