--- a/pages/nosotros.html
+++ b/pages/nosotros.html
@@ -31,7 +31,7 @@
                   <a class="nav-link active" aria-current="page" href="./../index.html">home</a>
                 </li>
                 <li class="nav-item">
-                  <a class="nav-link active" aria-current="page" href="./trabajos.html">colecciones</a>
+                  <a class="nav-link active" aria-current="page" href="./colecciones.html">colecciones</a>
                 </li>
                 <li class="nav-item">
                   <a class="nav-link active" aria-current="page" href="./nosotros.html">nosotros</a>
@@ -58,7 +58,7 @@
     <main>
       <section>
         <div class="banner">
-          <img src="./../img/Banner.png" alt="baner">
+          <img src="./../img/banner2.png" alt="baner">
         </div>
       </section>
       <div class="contenedor-flex">
