--- a/pages/contacto.html
+++ b/pages/contacto.html
@@ -3,7 +3,10 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>pre-entrega-gonzalez</title>
+    <title>contacto</title>
+     <!-- ceo on page -->
+    <meta name="description" content="puedes contactarnos y te daremos una atencion personalizada">
+    <meta name="keywords" content="contacto,tienda,atencion personalizada,llamados">
     <!-- bootstrap -->
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-T3c6CoIi6uLrA9TneNEoa7RxnatzjcDSCmG1MXxSR1GAsXEV/Dwwykc2MPK8M2HN" crossorigin="anonymous">
     <!-- css -->
@@ -63,8 +66,10 @@
   </section>
   <section>
      <div>
-      <h1>contacto</h1>   
-      <form class="contact">
+      <h1>contacto</h1> 
+      </div>
+      <div class="contact">
+        
        <div>
         <label for="">ingrese su nombre</label> <br>
         <input type="text" placeholder="nombre">
@@ -75,10 +80,9 @@
        </div>
        <div>
        <label for="">e.mail</label><br>
-       <input type="email" placeholder="@email">
-
-       </div>
-      </form>
+       <input type="email" placeholder="@email">      
+      </div>
+    
   </div>
   </section>
    
