--- a/index.html
+++ b/index.html
@@ -3,8 +3,11 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>pre-entrega-gonzalez</title>
-<!-- bootstrap -->
+    <title>tienda-page/principal</title>
+    <!-- ceo on page -->
+    <meta name="description" content="somos una pagina de ropa la cual realiza ventas online, aqui encontraras las mejores pilchas de adidas y varias marcas de altisimo presigio.">
+    <meta name="keywords" content="ropa,adidas,colecciones,tienda online,conjuntos,pantalons,buzos,remeras">
+    <!-- bootstrap -->
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-T3c6CoIi6uLrA9TneNEoa7RxnatzjcDSCmG1MXxSR1GAsXEV/Dwwykc2MPK8M2HN" crossorigin="anonymous">
 <!-- css -->
     <link rel="stylesheet" href="css/style.css">
