--- a/pages/colecciones.html
+++ b/pages/colecciones.html
@@ -3,7 +3,10 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>pre-entrega-gonzalez</title>
+    <title>nuestras colecciones</title>
+     <!-- ceo on page -->
+    <meta name="descrition" content="aqui podras ver nuestras colecciones de ultima moda ">
+    <meta name="keywords" content="colecciones,ropa calidas,conjuntos,hombre,mujer,moda">
     <!-- boostrap -->
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-T3c6CoIi6uLrA9TneNEoa7RxnatzjcDSCmG1MXxSR1GAsXEV/Dwwykc2MPK8M2HN" crossorigin="anonymous">
     <!-- css -->
@@ -64,28 +67,28 @@
         <h1>Nuestras colecciones</h1>
         <div class="contenedor-flex">
            <div class="card coleccion">
-             <img src="./../img/coleccion1.jpeg" alt="producto">
+             <img src="./../img/coleccion1.jpeg" alt="coleccion-ropaverde">
                <div>
                  <h2>producto</h2>
                  <p>Lorem ipsum dolor sit amet c</p>
                </div>
            </div>
            <div class="card coleccion">
-             <img src="./../img/coleccion2.jpeg" alt="producto">
+             <img src="./../img/coleccion2.jpeg" alt="conjuntos-vestidos/botas">
               <div>
                 <h2>producto</h2>
                 <p>Lorem ipsum dolor sit amet consectetur, adipisic</p>
               </div>
            </div>
            <div class="card coleccion">
-             <img src="./../img/coleccion3.jpeg" alt="producto">
+             <img src="./../img/coleccion3.jpeg" alt="vestidos-variados">
               <div>
                 <h2>producto</h2>
                 <p>Lorem ipsum dolor sit amet consectetur, adi</p>
               </div>
            </div>
            <div class="card coleccion">
-             <img src="./../img/coleccion4.jpeg" alt="producto">
+             <img src="./../img/coleccion4.jpeg" alt="conjuntos-oscuron-hombres">
               <div>
                 <h2>producto</h2>
                 <p>Lorem ipsum dolor sit amet con</p>
