--- a/pages/nosotros.html
+++ b/pages/nosotros.html
@@ -3,7 +3,10 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>pre-entrega-gonzalez</title>
+    <title>nosotros</title>
+     <!-- ceo on page -->
+    <meta name="description" content="aquie podras ver quines somos y nuestra ubicacion para acercarte a nuestra tienda fisica">
+    <meta name="keywords" content="informacion de tienda,ubicacion,tienda,info de tienda">
     <!-- bootstrap -->
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-T3c6CoIi6uLrA9TneNEoa7RxnatzjcDSCmG1MXxSR1GAsXEV/Dwwykc2MPK8M2HN" crossorigin="anonymous">
    <!-- css -->
