--- a/index.html
+++ b/index.html
@@ -69,7 +69,7 @@
       </div>
     </section>
     <section> 
-        <h1>PRODUCTOS DEPORTIVOS</h1>
+        <h1>PRODUC SPORT</h1>
         <div class="contenedor-flex">
            <div class="card">
              <img src="img/ropa1.jpeg" alt="producto" class="img-ropa">
