--- a/pages/colecciones.html
+++ b/pages/colecciones.html
@@ -59,7 +59,7 @@
         <img src="./../img/banner01.png" alt="baner">
       </div>   
       <section>
-        <h1>NUESTRAS COLECCIONES</h1>
+        <h1>NUESTRA COLECCION</h1>
         <div class="contenedor-flex">
            <div class="card coleccion">
              <img  src="./../img/coleccion1.jpeg" alt="coleccion-ropaverde">
